--- a/SnakesNLadders/SnakesNLadders/SnakesNLadders.csproj
+++ b/SnakesNLadders/SnakesNLadders/SnakesNLadders.csproj
@@ -96,6 +96,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Game.cs" />
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
       <SubType>Code</SubType>
